--- a/WebsiteBanGiayDep23/Areas/Admin/Views/Account/Edit.cshtml
+++ b/WebsiteBanGiayDep23/Areas/Admin/Views/Account/Edit.cshtml
@@ -45,13 +45,13 @@
 
     </div>
     <div class="card-body">
-        @using (Html.BeginForm("Edit", "Account", FormMethod.Post), new { })
+        @using (Html.BeginForm("Edit", "Account", FormMethod.Post))
         {
-            @Html.ValidationSummary(true)
+            @Html.ValidationSummary(false) //Hiển thị thông báo lỗi
             @Html.AntiForgeryToken()
             <div class="form-group">
                 <label>Tài khoản</label>
-                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control" })
+                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @disabled = "disabled" })
             </div>
             <div class="form-group">
                 <label>Họ tên</label>
@@ -67,7 +67,7 @@
             </div>
             <div class="form-group">
                 <label>Quyền</label>
-                @Html.DropDownListFor(x => x.Role, ViewBag.Role as SelectList, "- Chọn quyền -", new { @class = "form-control" })
+                @Html.DropDownListFor(x => x.Roles, ViewBag.Role as SelectList, "- Chọn quyền -", new { @class = "form-control" })
             </div>
             <div class="form-group">
                 <label>Mật khẩu</label>
