Edit, Delete Account

--- a/WebsiteBanGiayDep23/Areas/Admin/Views/Account/Index.cshtml
+++ b/WebsiteBanGiayDep23/Areas/Admin/Views/Account/Index.cshtml
@@ -52,7 +52,7 @@
                                 <td>@item.FullName</td>
                                 <td>@item.Email</td>
                                 <td>
-                                    <a href="/Admin/Account/Edit/@item.UserName" class="btn btn-sm btn-primary">Sửa</a>
+                                    <a href="/Admin/Account/Edit/@item.Id" class="btn btn-sm btn-primary">Sửa</a>
                                     <a href="#" data-user="@item.UserName" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
                                 </td>
                             </tr>
