--- a/WebsiteBanGiayDep23/Areas/Admin/Views/Account/Create.cshtml
+++ b/WebsiteBanGiayDep23/Areas/Admin/Views/Account/Create.cshtml
@@ -13,6 +13,9 @@
             <a href="/Admin/Home/Index" class="nav-link">Trang chủ</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
+            <a href="/Admin/Account/Index" class="nav-link">Tài khoản</a>
+        </li>
+        <li class="nav-item d-none d-sm-inline-block">
             <a href="/admin" class="nav-link">@ViewBag.Title</a>
         </li>
     </ul>
@@ -49,7 +52,7 @@
                 </div>
                 <div class="form-group">
                     <label>Quyền</label>
-                    @Html.DropDownListFor(x => x.Role, ViewBag.Role as SelectList, "- Chọn quyền -", new { @class = "form-control" })
+                    @Html.DropDownListFor(x => x.Roles, ViewBag.Role as SelectList, "- Chọn quyền -", new { @class = "form-control" })
                 </div>
                 <div class="form-group">
                     <label>Mật khẩu</label>
@@ -61,6 +64,7 @@
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-success">Thêm mới</button>
+                    <a href="/Admin/Account/Index" class="btn btn-danger">Quay lại</a>
                 </div>
             }
         </div>
@@ -74,3 +78,6 @@
 
 </section>
 <!-- /.content -->
+@section scripts{
+    <script src="~/Scripts/jsConvert.js"></script>
+}
