--- a/WebsiteBanGiayDep23/Areas/Admin/Views/Account/Edit.cshtml
+++ b/WebsiteBanGiayDep23/Areas/Admin/Views/Account/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model WebsiteBanGiayDep23.Models.ApplicationUser
+@model WebsiteBanGiayDep23.Models.EditAccountViewModel
 @{
-    ViewBag.Title = "Cập nhật thông tin tài khoản";
-    Layout = "~/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml";
+    ViewBag.Title = "Cập nhật tài khoản";
+    @* Layout = "~/Areas/Admin/Views/Shared/_LayoutEmpty.cshtml"; *@
 }
 
 @section naviheader {
@@ -17,7 +17,7 @@
             <a href="/Admin/Account/Index" class="nav-link">Tài khoản</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-            <a href="#" class="nav-link">Cập nhật</a>
+            <a href="#" class="nav-link">@Viewbog.Title</a>
         </li>
     </ul>
 }
@@ -41,7 +41,7 @@
 <!-- Default box -->
 <div class="card">
     <div class="card-header">
-        <h3 class="card-title">Thêm mới tài khoản</h3>
+        <h3 class="card-title">Chỉnh sửa tài khoản</h3>
 
     </div>
     <div class="card-body">
@@ -51,7 +51,7 @@
             @Html.AntiForgeryToken()
             <div class="form-group">
                 <label>Tài khoản</label>
-                @Html.TextBoxFor(x => x.UserName, new { @class = "form-control", @disabled = "disabled" })
+                <input readonly="readonly" type="text" class="form-control" value="@Model.UserName" />
             </div>
             <div class="form-group">
                 <label>Họ tên</label>
@@ -68,10 +68,6 @@
             <div class="form-group">
                 <label>Quyền</label>
                 @Html.DropDownListFor(x => x.Roles, ViewBag.Role as SelectList, "- Chọn quyền -", new { @class = "form-control" })
-            </div>
-            <div class="form-group">
-                <label>Mật khẩu</label>
-                @Html.PasswordFor(x => x.Password, new { @class = "form-control" })
             </div>
             <div class="form-group">
                 <button type="submit" class="btn btn-success">Cập nhật</button>
