--- a/WebsiteBanGiayDep23/Views/Review/Partial_Load_Review.cshtml
+++ b/WebsiteBanGiayDep23/Views/Review/Partial_Load_Review.cshtml
@@ -6,7 +6,7 @@
 
 @if (Model != null && Model.Any())
 {
-    foreach (var item in Model.Take(2))
+    foreach (var item in Model)
     {
         <div class="col-lg-6 reviews_col">
             <div class="tab_title reviews_title">
@@ -14,7 +14,6 @@
             </div>
 
             <!-- User Review -->
-
             <div class="user_review_container d-flex flex-column flex-sm-row">
                 <div class="user">
                     <div class="user_pic"></div>
@@ -29,25 +28,7 @@
                     <div class="user_name">@item.FullName</div>
                     <p>@item.Content</p>
                 </div>
-            </div>
-
-            <!-- User Review -->
-
-            <div class="user_review_container d-flex flex-column flex-sm-row">
-                <div class="user">
-                    <div class="user_pic"></div>
-                    <div class="user_rating">
-                        <ul class="star_rating">
-                            @Html.Raw(WebsiteBanGiayDep23.Common.Common.HtmlRate(item.Rate));
-                        </ul>
-                    </div>
-                </div>
-                <div class="review">
-                    <div class="review_date">@item.CreatedDate.ToString("dd MM yyyy")</div>
-                    <div class="user_name">@item.FullName</div>
-                    <p>@item.Content</p>
-                </div>
-            </div>
+            </div
         </div>
     }
 }
