--- a/WebsiteBanGiayDep23/Views/Review/Partial_Review.cshtml
+++ b/WebsiteBanGiayDep23/Views/Review/Partial_Review.cshtml
@@ -10,7 +10,7 @@
         OnFailure = "OnFailureRE",
         OnBegin = "OnBeginRE"
 
-    }, new { @Id = "myForm" }))
+    }, new { @Id = "review_form" }))
     {
         <script>
             function OnBeginRE() {
@@ -23,9 +23,8 @@
                 }
             }
         </script>
+
         @Html.AntiForgeryToken()
-
-
         if (User.Identity.IsAuthenticated)
         {
             <div>
@@ -33,7 +32,7 @@
                 @Html.TextBoxFor(x => x.FullName, new { @class = "form_input input_name", @placeholder = "Name", @id = "review_name" })
                 @Html.TextBoxFor(x => x.Email, new { @class = "form_input input_email", @placeholder = "Email", @id = "review_email" })
                 @Html.HiddenFor(x => x.UserName)
-                @Html.HiddenFor(x => x.ProductId, new {@Value = ViewBag.ProductID})
+                @Html.HiddenFor(x => x.ProductId, new { @Value = ViewBag.ProductId })
                 <input type="text" id="txtRate" name="Rate" value="4" style="visibility:hidden;" />
             </div>
             <div>
