--- a/WebsiteBanGiayDep23/Views/Shared/_Layout.cshtml
+++ b/WebsiteBanGiayDep23/Views/Shared/_Layout.cshtml
@@ -94,7 +94,7 @@
                                             </a>
                                             <ul class="account_selection">
                                                 <li><a href="/Account/Profile"><i class="fa fa-sign-in" aria-hidden="true"></i>Thông tin cá nhân</a></li>
-                                                <li><a href="/Account/FavoriteProduct"><i class="fa fa-sign-in" aria-hidden="true"></i>Yêu thích</a></li>
+                                                <li><a href="/Wishlist/Index"><i class="fa fa-sign-in" aria-hidden="true"></i>Yêu thích</a></li>
                                                 <li><a href="javascript:document.getElementById('logOffForm').submit()"><i class="fa fa-user-plus" aria-hidden="true"></i>Đăng xuất</a></li>
                                             </ul>
                                         }
