--- a/WebsiteBanGiayDep23/Views/Account/ForgotPassword.cshtml
+++ b/WebsiteBanGiayDep23/Views/Account/ForgotPassword.cshtml
@@ -5,7 +5,62 @@
 
 <link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
 
-<div class="container" style="margin-top:160px">
+<style>
+    .news_section_container {
+        margin-top: 180px;
+    }
+
+    .row-item-new {
+        margin-bottom: 20px;
+    }
+
+    .title-news {
+        font-size: 24px;
+        border-bottom: 1px solid;
+        padding: 15px 0;
+        margin-bottom: 25px;
+    }
+
+    .img-box img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+</style>
+
+<div class="container news_section_container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="title-news">@ViewBag.Title</h1>
+        </div>
+    </div>
+
+    <div class="row row-item-new">
+        <div class="col-md-12">
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+                {
+                    @Html.AntiForgeryToken()
+                    <h4>Thông tin cá nhân</h4>
+                    <hr />
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class=" row form-group">
+                        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+                        <div class="col-md-10">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+                        </div>
+                    </div>
+                    <div class="row form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" class="btn btn-default" value="Email Link" />
+                        </div>
+                    </div>
+                }
+        </div>
+    </div>
+</div>
+
+
+<!-- Default Code by Microsoft visual studio -->
+@* <div class="container" style="margin-top:160px">
     <hr />
     <h2>@ViewBag.Title.</h2>
     <div class="row">
@@ -31,13 +86,13 @@
                 }
             </section>
         </div>
-        @*<div class="col-md-4">
+        <div class="col-md-4">
             <section id="socialLoginForm">
                 @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
             </section>
-        </div>*@
+        </div>
     </div>
-</div>
+</div> *@
 
 @*@using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
