--- a/WebsiteBanGiayDep23/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/WebsiteBanGiayDep23/Views/Account/ResetPasswordConfirmation.cshtml
@@ -1,12 +1,48 @@
 ﻿@{
-    ViewBag.Title = "Reset password confirmation";
+    ViewBag.Title = "Xác nhận đặt lại mật khẩu thành công";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
-<div>
-    <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
-    </p>
+<link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
+
+<style>
+    .news_section_container {
+        margin-top: 180px;
+    }
+
+    .row-item-new {
+        margin-bottom: 20px;
+    }
+
+    .title-news {
+        font-size: 24px;
+        border-bottom: 1px solid;
+        padding: 15px 0;
+        margin-bottom: 25px;
+    }
+
+    .img-box img {
+        max-width: 100%;
+        max-height: 100%;
+    }
+</style>
+
+<div class="container news_section_container">
+    <div class="row">
+        <div class="col-md-12">
+            <h1 class="title-news">@ViewBag.Title</h1>
+        </div>
+    </div>
+
+    <div class="row row-item-new">
+        <div class="col-md-12">
+            <hgroup class="title">
+                <h1>@ViewBag.Title.</h1>
+            </hgroup>
+            <div>
+                <p>
+                    Mật khẩu của bạn đã được đặt lại thành công. Vui lòng  @Html.ActionLink("bấm vào đây để đăng nhập.", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+                </p>
+            </div>
+        </div>
+    </div>
 </div>
