--- a/WebsiteBanGiayDep23/Views/Account/Profile.cshtml
+++ b/WebsiteBanGiayDep23/Views/Account/Profile.cshtml
@@ -55,6 +55,14 @@
                 </div>
             }
         </div>
+
+        <div class="col-md-12">
+            @Html.Action("LichSuDonHang", "Review")
+        </div>
+
+        <div class="col-md-12">
+            @Html.ActionLink("Quên mật khẩu?", "Account" , "ForgotPassword")
+        </div>
     </div>
 </div>
 
