fix small error

--- a/WebsiteBanGiayDep23/Views/Products/Detail.cshtml
+++ b/WebsiteBanGiayDep23/Views/Products/Detail.cshtml
@@ -131,12 +131,12 @@
                         <div class="row">
                             <!--Danh sach review-->
                             <div class="col-lg-6 add_review_col">
-                                @Html.Action("Partial_Load_Review", "Review", new { productId = Model.Id })
+                                @Html.Action("Partial_Load_Review", "Review", new { productId = Model.ID })
                             </div>
 
                             <!--Tao review-->
                             <div class="col-lg-6 add_review_col">
-                                @Html.Action("Partial_Review", "Review", new { productId = Model.Id })
+                                @Html.Action("Partial_Review", "Review", new { productId = Model.ID })
                             </div>
 
                         </div>
