--- a/WebsiteBanGiayDep23/Views/Review/Partial_Load_Review.cshtml
+++ b/WebsiteBanGiayDep23/Views/Review/Partial_Load_Review.cshtml
@@ -28,7 +28,7 @@
                     <div class="user_name">@item.FullName</div>
                     <p>@item.Content</p>
                 </div>
-            </div
+            </div>
         </div>
     }
 }
