--- a/WebsiteBanGiayDep23/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/WebsiteBanGiayDep23/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -36,7 +36,7 @@
     <div class="row row-item-new">
         <div class="col-md-12">
             <hgroup class="title">
-                <h1>@ViewBag.Title.</h1>
+                <h3>Đặt lại mật khẩu thành công!</h3>
             </hgroup>
             <div>
                 <p>
