--- a/WebsiteBanGiayDep23/Views/Account/ResetPassword.cshtml
+++ b/WebsiteBanGiayDep23/Views/Account/ResetPassword.cshtml
@@ -39,7 +39,7 @@
             @using (Html.BeginForm("ResetPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Reset your password.</h4>
+                <h4>@ViewBag.Title</h4>
                 <hr />
                 @Html.ValidationSummary("", new { @class = "text-danger" })
                 @Html.HiddenFor(model => model.Code)
@@ -70,7 +70,6 @@
         </div>
     </div>
 </div>
-
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
