--- a/WebsiteBanGiayDep23/Views/Review/LichSuDonHang.cshtml
+++ b/WebsiteBanGiayDep23/Views/Review/LichSuDonHang.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<WebsiteBanGiayDep23.Models.EF.Order>
+﻿@model IEnumerable<WebsiteBanGiayDep23.Models.EF.Order>
 
 @if (Model != null)
 {
