--- a/WebsiteBanGiayDep23/Views/Review/Partial_Load_Review.cshtml
+++ b/WebsiteBanGiayDep23/Views/Review/Partial_Load_Review.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<WebsiteBanGiayDep23.Models.EF.ReviewProduct>
 
 <div class="tab_title reviews_title">
-    <h4>Reviews (@ViewBag.Count)</h4>
+    <h4>Các đánh giá (@ViewBag.Count)</h4>
 </div>
 
 @if (Model != null && Model.Any())
@@ -9,10 +9,6 @@
     foreach (var item in Model)
     {
         <div class="col-lg-6 reviews_col">
-            <div class="tab_title reviews_title">
-                <h4>Reviews</h4>
-            </div>
-
             <!-- User Review -->
             <div class="user_review_container d-flex flex-column flex-sm-row">
                 <div class="user">
