--- a/WebsiteBanGiayDep23/Areas/Admin/Views/Category/Index.cshtml
+++ b/WebsiteBanGiayDep23/Areas/Admin/Views/Category/Index.cshtml
@@ -53,7 +53,7 @@
                     <tr>
                         <th>STT</th>
                         <th>Tên danh mục</th>
-                        <th>Thứ tự</th>
+                        <th>Số lượng</th>
                         <th></th>
                     </tr>
                 </thead>
