--- a/WebsiteBanGiayDep23/Views/Wishlist/Index.cshtml
+++ b/WebsiteBanGiayDep23/Views/Wishlist/Index.cshtml
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-md-9">
                     <div class="content-box">
-                        <h3><a href="/@item.Product.Alias-n@(item.ProductId)" title="@item.Product.Title">@item.Product.Title</a></h3>
+                        <h3><a href="/chi-tiet/@item.Product.Alias-p@(item.ProductId)" title="@item.Product.Title">@item.Product.Title</a></h3>
                         <div class="description-box">
                             @item.Product.Description
                         </div>
